Fixed overflow issue on body

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,6 +20,7 @@
 @include icon-button.core-styles;
 
 body {
+  overflow: hidden;
   @include theme.prop(
     background-color,
     (
